src/test/deca/syntax/invalid/list_expr/test_list_expr_without_comma.deca
// Description:
//    tests de programme syntaxiquement incorrects : 
//
// Resultats:
//    Ligne 12: no viable alternative at input '!'
//    
//
// Historique:
//    cree le 01/01/2024

{
    println("Hello World" "!");
}
